crates/engine/src/snapshots/engine__parse__fields__duplicate_anchor.snap
---
source: crates/engine/src/parse.rs
expression: f
---
Finding {
    severity: Blocking,
    probe: "conformance",
    check: "item-anchor-duplicate",
    code: "conformance.item-anchor-duplicate",
    message: "duplicate `{#id}` anchor `{#dup}` in repeatable section",
    location: Some(
        Location {
            address: None,
            line: 12,
            col: 1,
        },
    ),
    route: None,
}
