crates/engine/src/snapshots/engine__parse__fields__missing_anchor.snap
---
source: crates/engine/src/parse.rs
expression: f
---
Finding {
    severity: Blocking,
    probe: "conformance",
    check: "item-anchor-missing",
    code: "conformance.item-anchor-missing",
    message: "repeatable item `A criterion with no anchor` has no `{#id}` anchor",
    location: Some(
        Location {
            address: None,
            line: 9,
            col: 1,
        },
    ),
    route: None,
}
