crates/engine/src/snapshots/engine__parse__fields__orphaned_sentinel.snap
---
source: crates/engine/src/parse.rs
expression: f
---
Finding {
    severity: Blocking,
    probe: "conformance",
    check: "orphaned-sentinel",
    code: "conformance.orphaned-sentinel",
    message: "`<!-- fields -->` sentinel without a following bullet list",
    location: Some(
        Location {
            address: None,
            line: 11,
            col: 1,
        },
    ),
    route: None,
}
